--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="logo">
-        <h3>Flirty Text</h3>
+        <h3 class="logo">Flirty Text</h3>
       </div>
       <div class="favourite">
         <i class="bi bi-heart-fill fav-icon"></i>
