--- a/templates/base.html
+++ b/templates/base.html
@@ -25,5 +25,10 @@
     {% block content %} {% endblock %}
 
     <script src="{% static 'js/script.js' %}"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1525837949088718"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
